--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,115 @@
-h1 {
-    background-color: red;
+/* root */
+:root {
+    --color-dark: #141922;
+    --color-darkgrey: #282828;
+    --color-light: #ffffff;
+    --color-black: #000000;
+    --color-lightgrey: #c1c1c1;
+    --color-highlight: #9ae22d;
+    --color-red: #ca1717;
+    --height-footer: 100px;
+    --height-header: 80px;
+}
+
+/* resets */
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
+
+/* utilities */
+/* flex */
+.d-flex {
+    display: flex;
+}
+.flex-col {
+    flex-direction: column;
+}
+/* text color */
+.text-light {
+    color: var(--color-light);
+}
+
+/* body */
+body {
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    color: var(--color-lightgrey);
+}
+
+/* wrapper */
+.wrapper {
+    height: 100vh;
+}
+
+/* upper content */
+.upper-content {
+    flex: 1 1 auto;
+}
+
+/* upper content ASIDE */
+#sidebar {
+    background: var(--color-black);
+    flex: 0 0 230px;
+}
+/* upper content MAIN */
+main {
+    flex: 1 1 auto;
+}
+main .header {
+    background:#0c1018;
+    height: var(--height-header);
+}
+main .main-content {
+    background: var(--color-dark);
+    height: calc(100vh - (var(--height-header) + var(--height-footer)));
+    overflow-y: auto;
+}
+
+/* footer */
+footer {
+    background: var(--color-darkgrey);
+    flex: 0 0 var(--height-footer);
+}
+
+/**********************
+MEDIA QUERIES
+*********************/
+/* tablets */
+@media screen and (max-width: 768px) {}
+
+/* big mobiles */
+@media screen and (max-width: 576px) {
+
+    /* per schermi piu piccoli riduco la larghezza di side-bar */
+    #sidebar {
+        max-width: 33%;
+    }
+}
+
+/* mobiles */
+@media screen and (max-width: 480px) {
+
+    /* per schermi piu piccoli riduco la larghezza di side-bar */
+    #sidebar {
+        flex-basis: 20%;
+    }
 }
