--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,12 @@ button {
 .text-smaller {
     font-size: var(--text-smaller);
 }
+.text-semibold {
+    font-weight: 600;
+}
+.text-bold {
+    font-weight: 800;
+}
 
 /* spacers */
 .p-inline-md {
@@ -147,6 +153,7 @@ body {
 
 /* upper content */
 .upper-content {
+    max-height: calc(100vh - var(--height-footer));
     flex: 1 1 auto;
 }
 
@@ -156,6 +163,8 @@ body {
     flex: 0 0 200px;
     padding-top: 15px;
     padding-bottom: 5px;
+    position: relative;
+    overflow: auto;
 }
 #sidebar .logo {
     width: 80%;
@@ -165,7 +174,7 @@ body {
     display: flex;
     align-items: center;
     gap: var(--gap-xs);
-    margin-block: 5px;
+    margin-block: 15px;
     cursor: pointer;
     position: relative;
 }
@@ -190,7 +199,48 @@ body {
     margin-block: 10px;
 }
 .playlist ul li {
-    margin-block: 10px;
+    margin-block: 15px;
+}
+/* sidebar profile-content */
+.profile-content {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;
+}
+
+.profile-content .install {
+    position: relative;
+    width: 100%;
+    order: 10;
+}
+
+.profile-content .install::before {
+    content: "";
+    display: block;
+    background: url("../img/download.svg");
+    width: 1.3rem;
+    aspect-ratio: 1;
+}
+
+.profile-content .install::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width:100%;
+    border: 1px solid var(--color-lightgrey);
+    left: 0;
+    bottom: -10px;
+}
+
+.profile-content .profile {
+}
+
+.profile-content .image {
+    width: 1.5rem;
+    background: var(--color-lightgrey);
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 /* upper content MAIN */
