--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ button {
 .pointer {
     cursor: pointer;
 }
+.visibility {
+    display: block;
+}
 /* flex */
 .d-flex {
     display: flex;
@@ -172,6 +175,9 @@ body {
 #sidebar .logo {
     width: 80%;
 }
+.logo-small {
+    display: none;
+}
 /* sidebar nav */
 .sidebar-nav li {
     display: flex;
@@ -221,26 +227,16 @@ body {
     cursor: pointer;
 }
 
-.profile-content .install::before {
-    content: "";
-    display: block;
-    background: url("../img/download.svg");
-    width: 1.3rem;
-    aspect-ratio: 1;
-}
 
-.profile-content .install::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width:100%;
-    border: 1px solid var(--color-lightgrey);
-    left: 0;
-    bottom: -10px;
+.profile-content .profile {
+    order: -1;
+    cursor: pointer;
 }
 
 .profile-content .image {
     width: 1.5rem;
+}
+.profile-content .profile .image {
     background: var(--color-lightgrey);
     border-radius: 50%;
     overflow: hidden;
@@ -430,7 +426,7 @@ MEDIA QUERIES
 
     /* per schermi piu piccoli riduco la larghezza di side-bar */
     #sidebar {
-        max-width: 33%;
+        width: 33%;
     }
 
     /* ridimensiono larghezza delle cards per farcene stare 2 */
@@ -444,7 +440,17 @@ MEDIA QUERIES
 
     /* ulteriore riduzione della larghezza di side-bar */
     #sidebar {
-        flex-basis: 20%;
+        max-width: fit-content;
+    }
+    /* display none per tutti gli elementi a cui e attaccata visibility */
+    .visibility {
+        display: none;
+    }
+    #sidebar .logo {
+        width: 25px;
+    }
+    .logo-small {
+        display: block;
     }
     /* ridimensionamento font-size */
     .main-content .main-nav {
