--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,9 @@ button {
     flex-direction: column;
 }
 
+.content-between {
+    justify-content: space-between;
+}
 .content-center {
     justify-content: center;
 }
@@ -358,6 +361,14 @@ main .main-content {
 footer {
     background: var(--color-darkgrey);
     flex: 0 0 var(--height-footer);
+}
+
+footer > div {
+    border: 1px solid red;
+    flex-grow: 1;
+}
+footer .center {
+    flex-grow: 2;
 }
 
 /**********************
