--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,16 @@ footer .center {
     flex-grow: 2;
 }
 
+footer .controls {
+    font-size: 1.2rem;
+    gap: 30px;
+    color: var(--color-light);
+}
+footer .controls :nth-child(3) {
+    font-size: 2.5rem;
+}
+
+
 /**********************
 MEDIA QUERIES
 *********************/
