--- a/css/style.css
+++ b/css/style.css
@@ -374,10 +374,31 @@ footer .center {
 footer .controls {
     font-size: 1.2rem;
     gap: 30px;
-    color: var(--color-light);
 }
 footer .controls :nth-child(3) {
     font-size: 2.5rem;
+}
+footer .timebar {
+    width: 100%;
+}
+
+footer .timebar div {
+    background: #474747;
+    border-radius: 30px;
+    width: 80%;
+    height: 4px;
+    position: relative;
+}
+footer .timebar div::before {
+    content: "";
+    display: block;
+    width: 20%;
+    height: 3px;
+    border-radius: 30px;
+    background: var(--color-lightgrey);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 
